--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
           sshpass -p "${{ secrets.VPS_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             cd /root/flk/ms/Events
             git pull origin main
+            git pull origin master
             mkdir ready!
             # Aquí puedes agregar otros comandos para construir y reiniciar tu servicio
             sudo systemctl restart nombre-del-servicio
