--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
 name: Deploy to VPS
 
 on:
+  workflow_dispatch:  # Permite la ejecución manual
   push:
     branches:
       - main # O la rama que uses para despliegues
