--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: Dev  # Especifica el entorno a utilizar
+
     
     steps:
       - name: Checkout code
