--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,11 @@ jobs:
         run: |
           sshpass -p "${{ secrets.VPS_PASSWORD }}" ssh -o StrictHostKeyChecking=no -p ${{ secrets.VPS_PORT }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             cd /root/flk/ms
+            sudo systemctl stop events
             git pull origin main
             git pull origin master
             mkdir -p ready!  # Corregido: mkdir necesita -p para no fallar si el directorio ya existe
+            dotnet publish --configuration Release --output ./publish
             # Aquí puedes agregar otros comandos para construir y reiniciar tu servicio
-            sudo systemctl restart nombre-del-servicio
+            sudo systemctl start events
           EOF
