--- a/Events/appsettings.json
+++ b/Events/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ClickHouseConnection": "Host=149.50.131.6;Port=9000;Password=;Database=events",
+    "ClickHouseConnection": "Host=localhost;Port=9000;Password=;Database=events",
     "RedisConnection": "149.50.131.6:6379,password=Rosesandwild2024!"
   },
   "AllowedHosts": "*"
